<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogbox"
        android:elevation="3dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/resources"
        android:textColor="#3A3131"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <RelativeLayout
        android:id="@+id/education_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/education"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@+id/mindful_layout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/education"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/educationtxt"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mindful_layout"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mindful"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/mindful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/Mindfulness"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/Mindfultext"
            android:textSize="15sp"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>