<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dialogbox"
        android:elevation="2dp"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gethelp_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/visit"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@drawable/rect"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/visit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:translationZ="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintTop_toTopOf="@id/box"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/call"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@drawable/rect"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/call"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:translationZ="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@id/guideV1"
        app:layout_constraintTop_toTopOf="@id/box" />

    <TextView
        android:id="@+id/gethelp_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/info_1"
        android:translationZ="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@id/guideV0"
        app:layout_constraintTop_toTopOf="@id/box" />

    <TextView
        android:id="@+id/gethelp_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/description_1"
        android:textSize="12sp"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="@id/guideV1"
        app:layout_constraintStart_toStartOf="@id/guideV0"
        app:layout_constraintTop_toBottomOf="@id/gethelp_name"
        android:paddingBottom="5dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>