<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.fragments.LandingActivity"
    android:weightSum="10"
    android:id="@+id/resourcefrag"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_medium"
            android:gravity="left|bottom"
            android:text="@string/resources"
            android:textColor="#3A3131"
            android:textSize="35sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:weightSum="10"
        android:background="@color/white"
        android:elevation="5dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userNametv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="10dp"
            android:paddingTop="20dp"
            android:gravity="left|bottom"
            android:text="Please select one of the two options below to get started:"
            android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/mindful_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="20dp"
        android:background="@drawable/mindfulness_base"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="5dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mindfulness"
            android:fontFamily="@font/roboto_bold"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/Mindfultext"
            android:layout_marginVertical="10dp"
            android:textSize="15sp"
            />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/education_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="20dp"
        android:background="@drawable/education_base"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@+id/mindful_layout"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:elevation="5dp"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:fontFamily="@font/roboto_bold"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/educationtxt"
                android:layout_marginVertical="10dp"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</LinearLayout>