<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard_body"
    android:weightSum="10"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/curved_bright">

      <com.github.mikephil.charting.charts.CombinedChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linechart"
         >

          <TextView
              android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Sleep &amp; Mood for Last 7 Days"
              android:gravity="center"/>
      </com.github.mikephil.charting.charts.CombinedChart>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/curved_bright"
            android:layout_margin="5dp">
            <TextView

                android:id="@+id/next_quiz_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/next_quiz_header"
                android:textColor="#9F9F9F"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/next_date_taken"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/next_quiz_date"
                android:textColor="#9F9F9F"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/curved_bright"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/status_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/currentprofile"
                android:textColor="#9F9F9F"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/currentStatus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/currentlyfeeling"
                android:textColor="#9F9F9F"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center" />
        </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/curved_bright"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/avgsleep_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/averageslp"
                android:textColor="#9F9F9F"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/averagesleep"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_bold"
                android:text="sleep average"
                android:textColor="#9F9F9F"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/curved_bright"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/avg_mood_header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/avgmood"
                android:textColor="#9F9F9F"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/averagemood"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_bold"
                android:text="mood average"
                android:textColor="#9F9F9F"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>