<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    android:weightSum="10"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/daily_quiz"
            android:textSize="35sp"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/dialogbox"
            android:elevation="3dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialogbox"
        android:elevation="3dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.90">

        <TextView
            android:id="@+id/txtVw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_are_you_"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:background="@drawable/sad"
            app:layout_constraintBottom_toTopOf="@id/txtVw1"
            app:layout_constraintEnd_toStartOf="@id/seek_bar"
            app:layout_constraintTop_toBottomOf="@id/txtVw" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:max="100"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVw" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:background="@drawable/smiley"
            app:layout_constraintBottom_toTopOf="@id/txtVw1"
            app:layout_constraintStart_toEndOf="@id/seek_bar"
            app:layout_constraintTop_toBottomOf="@id/txtVw" />

        <TextView
            android:id="@+id/txtVw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/how_Well"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seek_bar" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtVw1" />

        <TextView
            android:id="@+id/txtVw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hours_0f_Sleep"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner1" />

        <NumberPicker
            android:id="@+id/picker1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtVw2" />

        <Button
            android:id="@+id/btnDoLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/cancel"
            android:text="Do Later"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/btnSubmit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picker1" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rect"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/btnDoLater"
            app:layout_constraintTop_toBottomOf="@id/picker1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>